fix layout overflow

--- a/packages/ui/src/layout/common/sidebar.module.scss
+++ b/packages/ui/src/layout/common/sidebar.module.scss
@@ -7,11 +7,10 @@
     content: "";
     position: absolute;
     height: 100%;
-    width: 50vw;
+    width: 1px;
     top: 0;
     z-index: -1;
     speak: none;
-    background-color: var(--bg-elevation-xs);
   }
 }
 
