--- a/packages/ui/src/layout/left-sidebar/left-sidebar.module.scss
+++ b/packages/ui/src/layout/left-sidebar/left-sidebar.module.scss
@@ -4,6 +4,7 @@
   &::before {
     border-right: 1px solid var(--divider);
     right: 0;
+    box-shadow: -50vw 0 0 50vw var(--bg-elevation-xs);
   }
 
   @media print {
